# fin

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: link.rs  main.rs
src/: cache.rs  daemon.rs  db.rs  link.rs  logging.rs  main.rs  plaid.rs  tui.rs  utils.rs
src/balance/: mod.rs  types.rs
src/daemon/: encryption.rs  handlers.rs  mod.rs  types.rs
src/entity/: asset_accounts.rs  asset_balance_rules.rs  cake.rs  encryption.rs  liability_accounts.rs  mod.rs  plaid_item.rs  plan_excess_allocation_rules.rs  plan_liability_rules.rs  plans.rs
src/link/: handlers.rs  mod.rs  types.rs
src/plaid/: mod.rs  types.rs
src/plan/: mod.rs
web/: package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/components/: PlaidLinkButton.tsx  PlaidLinkFlow.tsx
web/src/hooks/: usePlaidAuthentication.ts  usePlaidLink.ts  usePlaidTokenExchange.ts
web/src/lib/: types.ts
