[package]
name = "fin"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking", "json"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tokio = { version="1.52.3", features=["full"] }
tower-http = { version = "0.6.11", features=["full" ]}
webbrowser = "1.2.1"
