[package]
name = "fin"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
keycrypt = "0.2.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"]}
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-sqlite", "runtime-tokio", "macros", "schema-sync", "entity-registry" ] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tokio = { version="1.52.3", features=["full"] }
tower-http = { version = "0.6.11", features=["full" ]}
webbrowser = "1.2.1"
